Add repository pattern with fixing endpoint

--- a/MinimalApi/appsettings.json
+++ b/MinimalApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=LAPTOP-IFPG73AJ; Database=CouponManage; Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+  }
 }
